updating with our expectations for audience knowledge

--- a/_includes/swc/who.html
+++ b/_includes/swc/who.html
@@ -1,8 +1,5 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
-  </strong>
+  The course is aimed at astronomers at all stages of their education and careers who wish to learn computational tools to increase the reproducibility and efficiency of their work. 
+  Participants should have some knowledge of programming (not necessarily Python) and have some familiarity with the shell command line (i.e., navigating directories on the shell command line). Specific knowledge of Python and Git are not required. 
 </p>
