fixing typo in python 2 setup instructions

--- a/_includes/swc/setup.html
+++ b/_includes/swc/setup.html
@@ -78,10 +78,10 @@
               <li>Quit command prompt by typing <code>exit</code> then pressing [Enter]</li>
             </ol>
           </li>
-          
-          
-          
-          
+
+
+
+
         </ol>
         <p>This will provide you with both Git and Bash in the Git Bash program.</p>
       </article>
@@ -255,9 +255,9 @@
   <p>
     <a href="https://python.org">Python</a> is a popular language for
     research computing, and great for general-purpose programming as
-    well.  If you think you already have Python installed, 
+    well.  If you think you already have Python installed,
     you can try running the test scripts (see bottom of this section) and they will let you
-    know if you are missing anything. 
+    know if you are missing anything.
     If you aren't sure how to get what you're missing, feel free to email me.
     Installing all of its research packages individually can be
     a bit difficult, so we recommend
@@ -270,7 +270,7 @@
     <strong>please make sure you install Python version 3.x</strong>
     (e.g., 3.6 is fine). If you have an Anaconda installation of Python 2.7,
     you don't need to download a new version of Anaconda, you can create a new
-    Python 3.8 environemnt with the command: <code>conda create —name py38 python=3.8 anaconda</code>
+    Python 3.8 environemnt with the command: <code>conda create --name py38 python=3.8 anaconda</code>
   </p>
 
   <p>
