--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -14,4 +14,17 @@
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
+    <h3>Day 2</h3>
+    <table class="table table-striped">
+      <tr> <td>08:00</td>  <td>Help with setup (OPTIONAL)</td> </tr>
+      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:30</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>15:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>17:00</td>  <td>END</td> </tr>
+    </table>
+  </div>
 </div>
