--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -14,6 +14,7 @@
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
+  <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>08:00</td>  <td>Help with setup (OPTIONAL)</td> </tr>
@@ -26,5 +27,6 @@
       <tr> <td>15:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
+  </div>
   </div>
 </div>
