--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,28 +3,27 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>08:00</td>  <td>Help with setup (OPTIONAL)</td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>09:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
+      <tr> <td>10:00</td>  <td>Introduction to the Unix Shell </td> </tr>
+      <tr> <td>10:45</td>  <td>Morning break</td> </tr>
+      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell 1</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Automating Tasks with the Unix Shell 2</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>14:45</td>  <td>Building Programs with Python 1</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>08:00</td>  <td>Help with setup (OPTIONAL)</td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>10:00</td>  <td>Building Programs with Python 2</td> </tr>
+      <tr> <td>10:45</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>14:45</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
