--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -6,11 +6,11 @@
       <tr> <td>10:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
       <tr> <td>11:00</td>  <td>Introduction to the Unix Shell </td> </tr>
       <tr> <td>12:00</td>  <td>Break</td> </tr>
-      <tr> <td>12:15</td>  <td>Automating Tasks with the Unix Shell 1</td> </tr>
+      <tr> <td>12:15</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
       <tr> <td>13:15</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:45</td>  <td>Automating Tasks with the Unix Shell 2</td> </tr>
+      <tr> <td>14:45</td>  <td>Programming with Python</td> </tr>
       <tr> <td>15:45</td>  <td>Break</td> </tr>
-      <tr> <td>16:00</td>  <td>Building Programs with Python 1</td> </tr>
+      <tr> <td>16:00</td>  <td>Programming with Python/td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
@@ -18,9 +18,9 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>11:00</td>  <td>Building Programs with Python 3</td> </tr>
+      <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
       <tr> <td>12:00</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:15</td>  <td>Building Programs with Python 4</td> </tr>
+      <tr> <td>12:15</td>  <td>Building Programs with Python</td> </tr>
       <tr> <td>13:15</td>  <td>Lunch break</td> </tr>
       <tr> <td>14:45</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>15:45</td>  <td>Break</td> </tr>
