Fix left bracket.

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -10,7 +10,7 @@
       <tr> <td>13:15</td>  <td>Lunch break</td> </tr>
       <tr> <td>14:45</td>  <td>Programming with Python</td> </tr>
       <tr> <td>15:45</td>  <td>Break</td> </tr>
-      <tr> <td>16:00</td>  <td>Programming with Python/td> </tr>
+      <tr> <td>16:00</td>  <td>Programming with Python </td> </tr>
       <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
