--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -5,29 +5,30 @@
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td>10:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
       <tr> <td>11:00</td>  <td>Introduction to the Unix Shell </td> </tr>
-      <tr> <td>12:00</td>  <td>Break</td> </tr>
-      <tr> <td>12:15</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>13:15</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:45</td>  <td>Programming with Python</td> </tr>
-      <tr> <td>15:45</td>  <td>Break</td> </tr>
-      <tr> <td>16:00</td>  <td>Programming with Python </td> </tr>
-      <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>17:30</td>  <td>END</td> </tr>
+      <tr> <td>12:20</td>  <td>Break</td> </tr>
+      <tr> <td>12:50</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>14:00</td>  <td>Break</td> </tr>
+      <tr> <td>14:30</td>  <td>Programming with Python</td> </tr>
+      <tr> <td>15:50</td>  <td>Break</td> </tr>
+      <tr> <td>16:10</td>  <td>Programming with Python </td> </tr>
+      <tr> <td>17:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>18:00</td>  <td>END</td> </tr>
     </table>
   </div>
  
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
+      <tr> <td>10:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
       <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>12:00</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:15</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>13:15</td>  <td>Lunch break</td> </tr>
-      <tr> <td>14:45</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>15:45</td>  <td>Break</td> </tr>
-      <tr> <td>16:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>17:30</td>  <td>END</td> </tr>
+      <tr> <td>12:20</td>  <td>Break</td> </tr>
+      <tr> <td>12:50</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>14:00</td>  <td>Break</td> </tr>
+      <tr> <td>14:30</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>15:50</td>  <td>Break</td> </tr>
+      <tr> <td>16:10</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>17:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>18:00</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
