--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -4,9 +4,9 @@
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td>10:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
-      <tr> <td>11:00</td>  <td>Introduction to the Unix Shell </td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Unix Shell: Pipes, Filters, and Loops (lessons 4-5) </a> </td> </tr>
       <tr> <td>12:20</td>  <td>Break</td> </tr>
-      <tr> <td>12:50</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>12:50</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Unix Shell: Shell scripting (lesson 6)</a> </td> </tr>
       <tr> <td>14:00</td>  <td>Break</td> </tr>
       <tr> <td>14:30</td>  <td>Programming with Python</td> </tr>
       <tr> <td>15:50</td>  <td>Break</td> </tr>
