--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -8,9 +8,9 @@
       <tr> <td>12:20</td>  <td>Break</td> </tr>
       <tr> <td>12:50</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Unix Shell: Shell scripting (lesson 6)</a> </td> </tr>
       <tr> <td>14:00</td>  <td>Break</td> </tr>
-      <tr> <td>14:30</td>  <td>Programming with Python</td> </tr>
+      <tr> <td>14:30</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
       <tr> <td>15:50</td>  <td>Break</td> </tr>
-      <tr> <td>16:10</td>  <td>Programming with Python </td> </tr>
+      <tr> <td>16:10</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a> </td> </tr>
       <tr> <td>17:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>18:00</td>  <td>END</td> </tr>
     </table>
@@ -20,7 +20,7 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>10:30</td>  <td>Help with setup (OPTIONAL)</td> </tr>
-      <tr> <td>11:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>11:00</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
       <tr> <td>12:20</td>  <td>Break</td> </tr>
       <tr> <td>12:50</td>  <td><a href="http://swcarpentry.github.io/git-novice/">Version Control with Git</a></td> </tr>
       <tr> <td>14:00</td>  <td>Break</td> </tr>
